Add FFM source set and JUnit